--- a/config/view.yml
+++ b/config/view.yml
@@ -115,6 +115,17 @@ entradaBodega:
   view:
     title: Ver Entrada de Bodega
     
+salidaBodega:
+  index:
+    title: Salida de Bodega
+    javascript:
+      - index.js
+  edit:
+    title: Editar Salida de Bodega
+    
+  view:
+    title: Ver Salida de Bodega    
+    
 tipoInsumo:
   index:
     title: Tipo Insumo
@@ -158,17 +169,21 @@ detalleEntrada:
     
   view:
     title: Ver Detalle Entrada
+    javascript:
+      - index.js
     
-detalleEmpaque:
+detalleSalida:
   index:
-    title: Detalle Empaque
+    title: Detalle Salida
     javascript:
       - index.js
   edit:
-    title: Editar Detalle Empaque
+    title: Editar Detalle Salida
     
   view:
-    title: Ver Detalle Empaque
+    title: Ver Detalle Salida
+    javascript:
+      - index.js
     
 empresa:
   index:
