ingreso caña avances

--- a/config/view.yml
+++ b/config/view.yml
@@ -213,3 +213,9 @@ controlCalidad:
     
   view:
     title: Ver control calidad
+    
+ingresoCaña:
+  index:
+    title: Ingreso Caña
+    javascript:
+      - index.js
