Correcion de Actualizacion en los diccionarios.

--- a/config/view.yml
+++ b/config/view.yml
@@ -227,3 +227,9 @@ controlCalidad:
     
   view:
     title: Ver control calidad
+    
+ingresoCaña:
+  index:
+    title: Ingreso Caña
+    javascript:
+      - index.js
