--- a/config/view.yml
+++ b/config/view.yml
@@ -229,7 +229,7 @@ controlCalidad:
   view:
     title: Ver control calidad
     
-ingresoCaña:
+ingresoCana:
   index:
     title: Ingreso Caña
     javascript:
