Ajuste en Diccionario de dos palabras nuevas (Pagina (Page), de (of)) iMPLEMENTADO EN TODAS LAS TABLAS YA. Arreglo de sostenimiento de dato en formulario en caso de error implementado en tablas: Empleado, Credencial, Pago Trabajadores.

--- a/config/routing.yml
+++ b/config/routing.yml
@@ -6,7 +6,7 @@ homepage:
     - model/usuarioTableClass.php
 traduccion:
   url:    /traduccion
-  param:  { module: empleado, action: traductor, format: html }
+  param:  { module: menu, action: traductor, format: html }
   
 ##-------------------------- shfSecurity --------------------------##
 shfSecurity_index:
