--- a/config/view.yml
+++ b/config/view.yml
@@ -245,7 +245,7 @@ ingresoCana:
     title: Ingreso Caña
     javascript:
       - index.js
-      
+
 aguas:
   index:
     title: Aguas
@@ -273,3 +273,21 @@ cachaza:
     
   view:
     title: Ver Cachaza
+
+  edit:
+    title: Editar ingreso Caña
+    
+  view:
+    title: Ver Ingreso Caña
+
+bagazo:
+  index:
+    title: Bagazo
+    javascript:
+      - index.js
+  edit:
+    title: Editar Bagazo
+    
+  view:
+    title: Ver Bagazo
+
